81901: Fix expandable section submenu spacing
* Selection outlines were cut off by the icon (which needs to be full height for the animation-

--- a/src/app/admin/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.scss
@@ -105,9 +105,6 @@
                         ul {
                           padding-top: var(--bs-spacer);
 
-                          // move nested elements over to the left and pad so their :focus-visible outline
-                          // doesn't get cut off by the parent section's icon
-                          margin-left: calc(-1 * var(--bs-spacer));
                           li a {
                             padding-left: var(--bs-spacer);
                           }
